# rati

./: .dockerignore  .env  .env.example  .env.example.comprehensive  .gitignore  API_DOCUMENTATION.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.cli  LICENSE  Makefile  README.md  browser-launcher.sh  deploy.sh  detect-platform.sh  docker-compose.dev.yml  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  eslint.config.js  explore-agent.sh  health-check.sh  launch-agents.sh  package-lock.json  package.json  prometheus.yml  rati-cli.sh  seed.json  setup-agent.sh  setup.sh  summon  summon-avatar.sh  test-agent.sh  test-arweave-network.js  test-e2e.sh  test-integration.sh  test-proxy.js  welcome.sh
.github/: pull_request_template.md
agent/: .env.enhanced  .env.example  .env.test  Dockerfile  README.md  agent-minimal.js  agent-simple.js  agent.js  index.js  metrics-server.js  package-lock.json  package-simple.json  package.json  prompt-enhanced.md  prompt.md  simple-journal.js  start-simple.js  start.js  test-enhancements.js
deployment-service/: .env.example  Dockerfile  cli.js  deployment-manager.js  index.js  metrics.js  package-lock.json  package.json  server-new.js  server-simple.js  server.js  server.js.broken
docker/: init.sql  nginx.conf  prometheus.yml
examples/: echo-character.json  nova-character.json  sage-character.json
frontend/: README.md  (+7 more)
orb-agent-mono/contracts/solana-forge/: Anchor.toml  Cargo.toml
orb-agent-mono/contracts/solana-forge/src/: lib.rs
orb-agent-mono/contracts/solana-forge/tests/: orb_forge.ts
(+216 files in other folders)
