[package]
name = "orb-forge"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "orb_forge"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
solana-program = "1.18.17"
spl-token = "4.0.0"
mpl-token-metadata = "4.1.2"
wormhole-anchor-sdk = "0.1.0"
borsh = "0.10.3"

[dev-dependencies]
solana-sdk = "1.18.17"
solana-program-test = "1.18.17"
tokio = { version = "1.38", features = ["macros"] }